; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/virtio/network/extr_if_vtnet.c_vtnet_modevent.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/virtio/network/extr_if_vtnet.c_vtnet_modevent.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@vtnet_modevent.loaded = internal global i32 0, align 4
@.str = private unnamed_addr constant [13 x i8] c"vtnet_tx_hdr\00", align 1
@vtnet_tx_header_zone = common dso_local global i32* null, align 8
@EBUSY = common dso_local global i32 0, align 4
@EOPNOTSUPP = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32, i32, i8*)* @vtnet_modevent to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @vtnet_modevent(i32 %0, i32 %1, i8* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca i8*, align 8
  %7 = alloca i32, align 4
  store i32 %0, i32* %4, align 4
  store i32 %1, i32* %5, align 4
  store i8* %2, i8** %6, align 8
  store i32 0, i32* %7, align 4
  %8 = load i32, i32* %5, align 4
  switch i32 %8, label %32 [
    i32 131, label %9
    i32 130, label %16
    i32 128, label %23
    i32 129, label %31
  ]

9:                                                ; preds = %3
  %10 = load i32, i32* @vtnet_modevent.loaded, align 4
  %11 = add nsw i32 %10, 1
  store i32 %11, i32* @vtnet_modevent.loaded, align 4
  %12 = icmp eq i32 %10, 0
  br i1 %12, label %13, label %15

13:                                               ; preds = %9
  %14 = call i32* @uma_zcreate(i8* getelementptr inbounds ([13 x i8], [13 x i8]* @.str, i64 0, i64 0), i32 4, i32* null, i32* null, i32* null, i32* null, i32 0, i32 0)
  store i32* %14, i32** @vtnet_tx_header_zone, align 8
  br label %15

15:                                               ; preds = %13, %9
  br label %34

16:                                               ; preds = %3
  %17 = load i32*, i32** @vtnet_tx_header_zone, align 8
  %18 = call i32 @uma_zone_get_cur(i32* %17)
  %19 = icmp sgt i32 %18, 0
  br i1 %19, label %20, label %22

20:                                               ; preds = %16
  %21 = load i32, i32* @EBUSY, align 4
  store i32 %21, i32* %7, align 4
  br label %22

22:                                               ; preds = %20, %16
  br label %34

23:                                               ; preds = %3
  %24 = load i32, i32* @vtnet_modevent.loaded, align 4
  %25 = add nsw i32 %24, -1
  store i32 %25, i32* @vtnet_modevent.loaded, align 4
  %26 = icmp eq i32 %25, 0
  br i1 %26, label %27, label %30

27:                                               ; preds = %23
  %28 = load i32*, i32** @vtnet_tx_header_zone, align 8
  %29 = call i32 @uma_zdestroy(i32* %28)
  store i32* null, i32** @vtnet_tx_header_zone, align 8
  br label %30

30:                                               ; preds = %27, %23
  br label %34

31:                                               ; preds = %3
  br label %34

32:                                               ; preds = %3
  %33 = load i32, i32* @EOPNOTSUPP, align 4
  store i32 %33, i32* %7, align 4
  br label %34

34:                                               ; preds = %32, %31, %30, %22, %15
  %35 = load i32, i32* %7, align 4
  ret i32 %35
}

declare dso_local i32* @uma_zcreate(i8*, i32, i32*, i32*, i32*, i32*, i32, i32) #1

declare dso_local i32 @uma_zone_get_cur(i32*) #1

declare dso_local i32 @uma_zdestroy(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
